--- a/generic-template.tex
+++ b/generic-template.tex
@@ -4,7 +4,7 @@
 \usepackage{hyperref}
 \usepackage{url}
 \usepackage{graphicx}
-\usepackage{wrapfig}  
+\usepackage{wrapfig}   
 
 \title{\bf Generic Technical Paper Skeleton}
 
@@ -53,7 +53,7 @@ The rest of this paper first discusses related work in \ref{sec:RelatedWork}, an
 
 \section{Related Work}\label{sec:RelatedWork}
 
-\textbf{Other efforts that exist to solve this problem and why are they less effective than our method} Resist the urge to point out only flaws in other work. Do your best to point out both the strengths and weaknesses to provide as well rounded a view of how your idea relates to other work as possible 
+\textbf{Other efforts that exist to solve this problem and why are they less effective than our method} Resist the urge to point out only flaws in other work. Do your best to point out both the strengths and weaknesses to provide as well rounded a view of how your idea relates to other work as possible
 
 In a social and political sense, it is {\em very smart} as well as ethical to say good things, which are true, about other people's work. A major motivation for this is that editors and program committee members have to get a set of reviews for your paper. The easiest way for them to decide who should review it is to look at the set of references to {\em related work} (e.g., \cite{Anderson2007,Anderson2009}) to find people who are likely to be competent to review your paper.  The people whose work you talk about are thus likely to be reading what you say about {\em their} work while deciding what to say about {\em your} work.
 
@@ -134,7 +134,7 @@ Images should always be in a vector scalar format when possible, and it is nearl
     \label{fig:crow}
 \end{figure}
 
-The shape of your image or table may affect how you choose to display it. For example, a nice portrait image, such as Figure~\ref{fig:crow}, fits nicely in a column. Tables rarely fit in columns, hence we may need to display them across columns. To accomplish this with tables or figures add a star (*) to the word figure or table. 
+The shape of your image or table may affect how you choose to display it. For example, a nice portrait image, such as Figure~\ref{fig:crow}, fits nicely in a column. Tables only occasionally fit in columns, hence we may need to display them across columns. To accomplish this with tables or figures add a star (*) to the word figure or table. 
 
 Table~\ref{tbl:frequencies} shows the ranges of radio frequencies.
 
@@ -144,13 +144,13 @@ Table~\ref{tbl:frequencies} shows the ranges of radio frequencies.
     \label{tbl:frequencies}
     \begin{tabular}{|l|l|l|l|}
         \hline
-        Name & Abbreviation & Frequency & Wavelength \\
+        \textbf{Name} & \textbf{Abbreviation} & \textbf{Frequency} & \textbf{Wavelength} \\
         \hline \hline
         Very low frequency & VLF & 3-30 kHz & 100 - 10 km \\ \hline
         Low frequency & LF & 30-300 kHz & 10 - 1 km \\ \hline
-        %Medium frequency & MF & 300-3,000 kHz & 1,000 - 100 m \\ \hline
-        %High frequency & HF & 3-30 MHz  & 100 - 10 m \\ \hline
-        %Very high frequency & VHF & 30-300 MHz & 10 - 1 m \\ \hline        
+        Medium frequency & MF & 300-3,000 kHz & 1,000 - 100 m \\ \hline
+        High frequency & HF & 3-30 MHz  & 100 - 10 m \\ \hline
+        Very high frequency & VHF & 30-300 MHz & 10 - 1 m \\ \hline        
     \end{tabular}
 \end{table}
 
