Minor fixes to introduction

--- a/generic-template.tex
+++ b/generic-template.tex
@@ -49,7 +49,7 @@ This should include a statement about the characteristics of your solution to th
 
 The short statement below is often all you need, but you should change it when your paper has a different structure, or when more information is {\em required} to describe what a given section contains. If it isn't {\em required} then you don't want to say it here.
 
-The rest of this paper first discusses related work in \ref{sec:RelatedWork}, and then describes our implementation in \ref{sec:Implementation}. \ref{sec:Evaluation} describes how we evaluated our system and presents the results. \ref{sec:Conclusion} presents our conclusions and describes future work.
+The rest of this paper first discusses related work in Section~\ref{sec:RelatedWork}, and then describes our implementation in Section~\ref{sec:Implementation}. Section~\ref{sec:Evaluation} describes how we evaluated our system and presents the results. Finally, Section~\ref{sec:Conclusion} presents our conclusions and describes future work.
 
 \section{Related Work}\label{sec:RelatedWork}
 
@@ -125,7 +125,7 @@ A picture is worth a thousand words and a Table is worth at least one hundred. C
 
 \subsection{Images}
 
-Images should always be in a vector scalar format when possible, and it is nearly always possible. Almost all scalar graphics programs can export the image to a portable document format (PDF). Figure~\ref{fig:crow} shows how to  easily include PDF files. This PDF started life as a scalar vector graphic (SVG) file create in InkScape. 
+Images should always be in a vector scalar format when possible, and it is nearly always possible. Almost all scalar graphics programs can export the image to a portable document format (PDF). Figure~\ref{fig:crow} shows how to easily include PDF files. This PDF started life as a scalar vector graphic (SVG) file created in InkScape. 
 
 \begin{figure}[h]
     \centering
