Fixed case problem for Mac and Linux

--- a/generic-template.tex
+++ b/generic-template.tex
@@ -115,7 +115,7 @@ Proposals are necessarily a good deal more vague in this section since you have 
 \item   Apply our solution or a related solution to a related problem
 \end{itemize}
 
-\bibliographystyle{IEEETrans}
+\bibliographystyle{IEEETranS}
 \bibliography{./my}
 
 \appendix
